force-app/zurich-base/main/default/objects/ProvinceAssignment__mdt/ProvinceAssignment__mdt.object-meta.xml
<CustomObject>
    <description>Almacenar la correspondecia entre Provincia y Agente Mediador o pull de Contact Center.</description>
    <label>Province Assignment</label>
    <pluralLabel>Provinces Assignments</pluralLabel>
</CustomObject>