force-app/zurich-base/main/default/objects/ProvinceAssignment__mdt/fields/AssignTo__c.field-meta.xml
<CustomField>
    <fullName>AssignTo__c</fullName>
    <description>Agente Mediador o CONTACT_CENTER.</description>
    <label>Assign to</label>
    <length>50</length>
    <type>Text</type>
</CustomField>