force-app/zurich-base/main/default/objects/ProvinceAssignment__mdt/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <description>Los dos primeros dígitos del Código Postal.</description>
    <label>PostalCode</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>