force-app/zurich-base/main/default/objects/ProvinceAssignment__mdt/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <description>Provincia.</description>
    <label>Province</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>